youfull/objects/Genealogy_Leader_Level__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This list stores the color coding of Leader Levels for all the markets</description>
    <fields>
        <fullName>Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NR__c</fullName>
        <label>Leader Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>Market Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Genealogy Leader Level</label>
</CustomObject>